# powerbimcp

./: .env.example  .gitignore  POWERBI_MCP_CAPABILITIES.md  README.md  claude_desktop_config.json  pyproject.toml
src/powerbi_mcp/: __init__.py  config.py  crypto.py  fabric_api.py  helper_app.py  microsoft_auth.py  models.py  powerbi_api.py  server.py  token_store.py  xmla.py
tests/: __init__.py  conftest.py  test_auth.py  test_config.py  test_crypto.py  test_fabric_api.py  test_helper_app.py  test_mcp_server.py  test_powerbi_api.py  test_xmla.py
xmla_bridge/PowerBIXmlaBridge/: PowerBIXmlaBridge.csproj  Program.cs
